pod-setup.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    app: my-app
spec:
  containers:
  - name: my-container
    image: docker-testapp-main-app
    imagePullPolicy: Never
    ports:
    - containerPort: 80
